add border and text

--- a/Visualisation_Prototype/app/index.html
+++ b/Visualisation_Prototype/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hierarchical Topic Modelling Visuallisation</title>
+    <link rel="stylesheet" type="text/css" href="css/app.css">
     <script src="lib/d3.js"></script>
     <script src="js/zoom.js"></script>
     <script src="js/core.js"></script>
