--- a/Visualisation_Prototype/app/index.html
+++ b/Visualisation_Prototype/app/index.html
@@ -18,7 +18,7 @@
     hexmap.init()
         .load_hexmap_data("data/top_level_hexmap.json")
         .load_topic_model("data/simple_hierarchical_topic_model.json")
-
+        .enable_zooming()
 
 </script>
 </body>
