--- a/Visualisation_Prototype/app/index5.html
+++ b/Visualisation_Prototype/app/index5.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script src="lib/d3.js"></script>
     <script src="lib/d3.layout.cloud.js"></script>
-    <script src="js/zoom.js"></script>
-    <script src="js/core.js"></script>
+    <script src="js/backup_version/zoom.js"></script>
+    <script src="js/backup_version/core.js"></script>
 </head>
 <body style="height: 100vh; width: 100vw; overflow: hidden; padding: 0; margin: 0">
 <div id="container" style="width: 100%; height: 100%; display: block">
