new overview for m2

--- a/Visualisation_Prototype/app/index.html
+++ b/Visualisation_Prototype/app/index.html
@@ -7,8 +7,9 @@
     <script src="lib/d3.js"></script>
     <script src="lib/d3.layout.cloud.js"></script>
     <script src="js/parts/base.js"></script>
+    <script src="js/parts/zooming_m1.js"></script>
     <script src="js/parts/ui.js"></script>
-    <script src="js/parts/data_process.js"></script>
+    <script src="js/parts/data_process_m1.js"></script>
     <script src="js/parts/single_hexagon.js"></script>
     <script src="js/parts/hexmap_m1.js"></script>
 
@@ -23,6 +24,7 @@
     var hexmap=new base_hexmap("#container");
     console.log(hexmap)
     add_data_process(hexmap);
+    add_zooming_m1(hexmap);
     add_ui(hexmap);
     add_single_hexagon_render(hexmap);
     add_hexmap_model_1(hexmap);
