work monday halfdone

--- a/Visualisation_Prototype/app/index_m2.html
+++ b/Visualisation_Prototype/app/index_m2.html
@@ -46,6 +46,10 @@
             "simple_hierarchical_topic_model.json",
             "simple_hierarchical_topic_model.json"
         ])
+        .load_compare_data([
+            "compare-l1-l2.json",
+            "compare-l2-l3.json"
+        ])
         .enable_zooming()
 
 
