--- a/Visualisation_Prototype/app/index_m2.html
+++ b/Visualisation_Prototype/app/index_m2.html
@@ -5,7 +5,9 @@
     <title>Hierarchical Topic Modelling Visuallisation</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script src="lib/d3.js"></script>
+    <script src="lib/seedrandom.min.js"></script>
     <script src="lib/d3.layout.cloud.js"></script>
+
     <script src="js/parts/base.js"></script>
     <script src="js/parts/zooming_m2.js"></script>
     <script src="js/parts/ui.js"></script>
